# nevernegative

./: .gitignore  README.md  pyproject.toml  test.py
examples/: concept.ipynb  test.ipynb  test.py
nevernegative/: __init__.py
nevernegative/callbacks/: base.py  save.py
nevernegative/color/: __init__.py  base.py  histogram_scaling.py  preset.py  resnet.py
nevernegative/color/config/: __init__.py  base.py  histogram_scaling.py  preset.py  resnet.py
nevernegative/crop/: base.py  hough.py
nevernegative/crop/config/: base.py  hough.py
nevernegative/dewarp/: base.py  checkerboard.py  hough.py
nevernegative/dewarp/config/: base.py  checkerboard.py  hough.py
nevernegative/films/: amber.py  base.py  cinestill.py  ilford.py  kodak.py
nevernegative/image/: image.py
nevernegative/io/readers/: base.py  rawpy.py
nevernegative/io/writers/: base.py  torch.py
nevernegative/layers/: base.py  blur.py  chain.py  edge.py  grey.py  resize.py  threshold.py  typing.py
nevernegative/layers/balancing/: base.py  basic.py  brightness.py  contrast.py  contrast_stretch.py  gamma.py  grey.py  histogram_scaling.py  invert.py  match_means.py  pigment.py  resnet.py  saturation.py  shift.py  temperature.py  white_balance.py
nevernegative/layers/color/: base.py  histogram.py  histogram_scaling.py  preset.py  presets.py  resnet.py  white_point.py
nevernegative/layers/common/: blur.py  brightness.py  clip.py  contrast.py  edge.py  grey.py  positive.py  resize.py  saturation.py  temperature.py  threshold.py
nevernegative/layers/config/: base.py  blur.py  edge.py  grey.py  resize.py  threshold.py
nevernegative/layers/crop/: base.py  box.py  hough.py
nevernegative/layers/dewarp/: base.py  checkerboard.py  hough.py
nevernegative/layers/distortion/: barrel_warping.py  checkerboard_calibration.py  chromatic_aberration.py
nevernegative/layers/metrics/: noise.py  pigment_match.py
nevernegative/scanner/: __init__.py  aerochrome.py  base.py  simple.py
nevernegative/typing/: blocks.py  config.py  image.py  layer.py
nevernegative/utils/: brightness.py  decorators.py  image.py
nevernegative/utils.py/: image.py
notebooks/: amber_800t.ipynb  cinestill_800t.ipynb  cinestill_800t_v2.ipynb  colorplus_200.ipynb  cropping.ipynb  delta_100 copy.ipynb  delta_100.ipynb  delta_3200.ipynb  delta_3200_v2.ipynb  ektar_100.ipynb  extract_film_pigment.ipynb  gold_200.ipynb  hp5+_400.ipynb  hp5+_400_v2.ipynb  ilfocolor_400.ipynb  pigment.ipynb  process.ipynb  sample.ipynb
src/: negative.py
src/layers/: base.py
src/typing/: image.py
(+43 files in other folders)
