[tool.poetry]
name = "nevernegative"
version = "0.1.0"
description = "A scanning tool for film negatives"
authors = ["Louis Manestar <louis.manestar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-image = "^0.24.0"
opencv-python = "^4.10.0.84"
rawpy = "^0.22.0"
imageio = "^2.35.1"
matplotlib = "^3.9.2"
numpy = "^2.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
mypy = "^1.11.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = "rawpy"
ignore_missing_imports = true
