[tool.poetry]
name = "nevernegative"
version = "0.1.0"
description = "A scanning tool for film negatives"
authors = ["Louis Manestar <louis.manestar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-image = "^0.24.0"
opencv-python = "^4.10.0.84"
rawpy = "^0.22.0"
imageio = "^2.35.1"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
pydantic = "^2.9.1"
scipy = "^1.14.1"
tqdm = "^4.66.5"
pywavelets = "^1.8.0"
torch = "^2.6.0"
torchvision = "^0.21.0"
kornia = "^0.8.0"
wand = "^0.6.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
mypy = "^1.11.2"
pytest = "^8.3.2"
types-tqdm = "^4.66.0.20240417"
line-profiler = "^4.2.0"


[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = ["rawpy", "scipy.*", "torchvision.*"]
ignore_missing_imports = true
